# aidoc-flow-engramory

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  HANDOFF.md  LICENSE  Makefile  NOTICE  README.md  TODO.md  docker-compose.yml  framework-feedback-log.md  pyproject.toml
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ai-review.yml  audit-trail.yml  auto-merge-ai-prs.yml  ci.yml  composition.yml  labeler.yml  markdown-lint.yml  secret-scan.yml  standards-drift.yml
config/: litellm.config.yaml
config/domains/: example-domain.yaml  example-project.yaml
db/migrations/: 0001_init_memory.sql  0002_add_domain_scope.sql  0003_reconcile_contracts.sql
docs/: AGENT-INTEGRATION.md  AGENT-QUICKSTART.md  ARCHITECTURE.md  CORES.md  GLOSSARY.md  HOW_TO_USE_THE_FRAMEWORK.md  INSTALL.md  MEMORY_DESIGN.md  PORTABILITY.md  README.md  ROADMAP.md  STRATEGY.md  UCX_INTEGRATION.md
docs/adr/: 0001-postgres-as-spine.md  0002-ports-and-adapters.md  0003-graph-engine-neo4j-over-age.md  0004-model-gateway-litellm.md  0005-canonical-memory-in-postgres.md  README.md
docs/research/: MEMORY_CONCEPT_REVIEW.md  MEMORY_LANDSCAPE.md  NEXUS_V3_REVIEW.md  RAC_REVIEW.md  README.md
plans/: PLAN-001_pre-first-run-remediation.md  PLAN-002_preprod-agent-readiness.md  PLAN-004_docs-review-remediation.md
roadmap/: ROADMAP.md
scripts/: smoke_preprod.sh
sdd/01_BRD/: BRD-00_index.md  BRD-01_platform_engramory_core.yaml  BRD-02_cloud_migration.yaml  BRD-03_advanced_distillation.yaml  BRD-04_domain_project_config.yaml  BRD-05_security_compliance.yaml  BRD-06_observability_ops.yaml  BRD-07_brain_portability_tooling.yaml  (+1 more)
tests/: conftest.py  test_migrations.py  test_ports.py
(+82 files in other folders)
