[project]
name = "engramory"
version = "0.1.0"
description = "Shared agent knowledge & memory core — per-agent distilled long-term memory over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Engramory contributors" }]
# The ports layer stays stdlib-only by design. psycopg is spine infrastructure
# (ADR-01 / SPEC-06): the repository uses the Postgres driver directly.
dependencies = ["psycopg[binary]>=3.2"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "mypy"]

[project.urls]
Repository = "https://github.com/vladm3105/aidoc-flow-engramory"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engramory"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["engramory"]
ignore_missing_imports = true
